--- a/scripts CSS/css-course-content-master/challenge/css/style.css
+++ b/scripts CSS/css-course-content-master/challenge/css/style.css
@@ -1,116 +1,73 @@
-/* 
-Primary Font: Lato
-Secondary Font: Roboto Condensed
-
-Dark Blue - rgb(70, 137, 244)
-Light Blue - rgb(186, 212, 255)
-
-'Bold' Orange - rgb(229, 158, 66)
-Light Orange - rgb(255, 227, 191)
-*/
-.content {
-	animation-name: fade-in;
-	animation-duration: 2s;	
+body
+{
+	background-image: url(/img/clouds-and-blue-sky-background-for-website.jpg);
+	background-repeat: cover;
+	font-family: 'Andika', sans-serif;
+	font-family: 'Prata', serif;
+	margin: 20px;
 }
 
-.sidebar {
-	animation-name: fade-in;
-	animation-duration: 2s;
+a:hover
+{
+	color: rgb(254, 173, 23);
 }
 
-img {
-	width: 400px;
-	height: 200px;
-	transition: 0.5s all;
-}
-
-img:hover {
-	height: 250px;
-	width: 500px;
-}
-
-body {
-	background: rgba(186, 212, 255, 0.5);
-}
-#main {
+#main
+{
 	display: grid;
-	grid-template-columns: 70% 30%;
-	grid-gap: 50px;
-	width: 100%;
+	grid-template-columns: 80% 20%;
+	grid-gap: 20px;
+	justify-content: space-around;
+	animation: fade-in 500ms ease-in-out 0s 1 normal;
 }
 
-p {
-	font-family: 'Lato', sans-serif;
+#subtitle-text
+{
+	text-decoration: underline;
 }
 
-li {
-	font-family: 'Lato', sans-serif;
-}
-
-a {
-	font-family: 'Lato', sans-serif;
-}
-
-h1 {
-	font-family: 'Roboto Condensed', sans-serif;
-}
-
-h2 {
-	font-family: 'Roboto Condensed', sans-serif;
-}
-
-.sidebar {
-	background: rgb(255, 227, 191);
-}
-.subtitle {
-
-} 
-
-.image-grid {
+#image-1
+{
+	width: 400px;
+	height: 600px;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: right;
 }
 
-.image-grid > img {
-	margin: 10px;
+.image-grid
+{
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto auto;
 }
 
-#image-1 {
-	float: right;
-	margin: 15px;
-	height: 300px;
+.grid-item
+{
+	width: 300px;
+	height: 150px;
+	transition: all 200ms ease-in-out;
 }
 
-.post {
-	border: 2px solid rgb(229, 158, 66);
-	margin: 10px;
+.grid-item:hover
+{
+	transform: scale(120%);
 }
 
-.post-title {
-	margin-left: 5px;
+.sidebar
+{
+	background-color: rgb(255,153,52);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
-.post-text {
-	margin-left: 5px;
-	margin-right: 5px;
+.post
+{
+	border: 2px solid black;
 }
 
-.post > a {
-	margin-left: 5px;
-	margin-right: 5px;
-	text-decoration: none;
-	color: rgb(70, 137, 244);
-	transition: 0.5s color;
+@keyframes fade-in 
+{
+	from{opacity: 0%;}
+	to{opacity: 100%;}
 }
-
-.post > a:hover {
-	color: rgb(186, 212, 255);
-}
-
-@keyframes fade-in {
-	from {opacity: 0;}
-	to {opacity: 1;}
-}
-
-
