--- a/projects/recipes website/html-css-simply-recipes-main/starter/css/main.css
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/css/main.css
@@ -64,7 +64,8 @@ html {
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
-body {
+body 
+{
   background: var(--backgroundColor);
   font-family: var(--bodyFont);
   font-weight: 400;
@@ -72,7 +73,8 @@ body {
   color: var(--textColor);
 }
 
-p {
+p 
+{
   margin-top: 0;
   margin-bottom: 1.5rem;
   max-width: 40em;
@@ -82,7 +84,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5 
+{
   margin: 0;
   margin-bottom: 1.38rem;
   font-family: var(--headingFont);
@@ -140,7 +143,7 @@ ul {
   border: transparent;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
-  padding: 0.375rem 0.75rem;
+  padding: 0.375rem 0.75rem; 
   box-shadow: var(--shadow-1);
   transition: var(--transtion);
   text-transform: capitalize;
@@ -259,4 +262,343 @@ ul {
 Navbar
 ===============
 */
+
+.nav-bar
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*background-color: black;*/
+}
+
+.nav-box
+{
+  width: 90vw;
+  max-width: var(--max-width);
+  /*background: red;*/
+}
+
+.nav-header
+{
+  height: 6rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: red; */
+}
+
+#nav-logo
+{
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
+
+.nav-btn
+{
+  padding: 0.15rem 0.75rem;
+}
+
+.nav-btn i
+{
+  font-size: 1.25rem;
+}
+
+.nav-links
+{
+  display: flex;
+  flex-direction: column;
+  height: 0;
+  overflow: hidden;
+  transition: var(--transition);
+}
+
+.show-links
+{
+  height: 309.79px;
+}
+
+.nav-link
+{
+  display: block;
+  text-align: center;
+  color: var(--grey-900);
+  letter-spacing: var(--letterSpacing);
+  padding: 1rem 0;
+  border-top: 1px solid var(--grey-500);
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-link:hover
+{
+  color:var(--primary-500);
+}
+
+.contact-link a
+{
+  padding: 0.15rem 1rem;
+}
+
+/* nav-bar on big screen: */
+@media screen and (min-width: 992px)
+{
+  .nav-btn
+  {
+    display: none;
+  }
+
+  .nav-bar
+  {
+    height: 6rem;
+  }
+
+  .nav-box
+  {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-header
+  {
+    height: auto;
+    margin-right: 2rem;
+  }
+
+  .nav-links
+  {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .nav-link
+  {
+    padding: 0;
+    border-top: none;
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+
+  .contact-link
+  {
+    margin-left: auto;
+    margin-right: 0;
+  }
+}
+
+  /*
+=============== 
+Page
+===============
+*/
+
+.page
+{
+  /* background-color: red; */
+  width: 90vw;
+  max-width: var(--max-width);
+  /* to align with the nav-bar */
+  margin: 0 auto;
+  padding-top: 2rem;
+  /* page-height: 100% of the screen minus the (nav-bar height + footer height)  */
+  min-height: calc(100vh - (6rem + 4rem));
+}
+
+  /*
+=============== 
+Header
+===============
+*/
+
+.hero
+{
+  height: 40vh;
+  background: url(/assets/main.jpeg) center/cover no-repeat;
+  border-radius: var(--borderRadius);
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.hero-container
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0; 
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: var(--borderRadius);
+}
+
+.hero-container, h1, h4
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+}
+
+  /*
+=============== 
+Recipes 
+===============
+*/
+
+.recipes-container
+{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto auto auto;
+  gap: 2rem 1rem;
+  border: 2px solid red
+}
+
+.recipes-list
+{
+  display: grid;
+  gap: 2rem 1rem;
+  padding-bottom: 3rem;
+  border: 2px solid green;
+}
+
+.recipe
+{
+  display: block;
+}
+
+.recipe-img
+{
+  height: 15rem;
+  border-radius: var(--borderRadius);
+  margin-bottom: 1rem;
+}
+
+.recipe h3
+{
+  color: var(--grey-700);
+  line-height: 1;
+  margin-bottom: 0;
+}
+
+.recipe p
+{
+  color: var(--grey-500);
+  line-height: 1;
+  margin-bottom: 0;
+  margin-top: 0.5rem;
+  letter-spacing: var(--letterSpacing);
+}
+
+/* layout for min 576px screens (like tablets) */
+@media screen and (min-width: 576px)
+{
+  .recipes-list
+  {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .recipe img
+  {
+    height: 10rem;
+  }
+}
+
+/* layout for min 992px screens */
+@media screen and (min-width: 992px)
+{
+  .recipes-container
+  {
+    grid-template-columns: 200px 1fr;
+  }
+
+  .recipes-list
+  {
+    order: 1;
+  }
+
+  .tag-container
+  {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .tags-list
+  {
+    
+  }
+}
+
+.tag-container
+{
+  border: 2px solid blue;
+  order: 1; /*stars on 0 by default*/
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 3rem;
+}
+
+.tag-container h3
+{
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+
+.tags-list
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.tags-list a
+{
+  display: block;
+  color: var(--grey-500);
+  transition: var(--transition);
+}
+
+.tags-list a:hover
+{
+  color: var(--primary-500);
+}
+
+/* hero layout on big screen */
+@media screen and (min-width: 768px) 
+{
+  .hero-container h1
+  {
+    font-size: 4rem;
+    margin-bottom: 0;
+  } 
+}
+
+/*
+=============== 
+Footer
+===============
+*/
+
+.page-footer
+{
+  height: 4rem;
+  text-align: center;
+  background-color: var(--black);
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-footer p
+{
+  margin: 0;
+}
+
+.footer-logo, .page-footer a
+{
+  color: var(--primary-500);
+}
+
+
 
