--- a/projects/little taco shop project/css/style.css
+++ b/projects/little taco shop project/css/style.css
@@ -6,7 +6,7 @@ html
 
 body 
 {
-    background-image: url("/img/c9b195614d7b4c31e1794025d18c4634.jpg");
+    background-image: url("../img/c9b195614d7b4c31e1794025d18c4634.jpg");
     background-size: cover;
     min-height: 100vh;
     max-width: 800px;
